# ComfyUI_RiceRound

./: .gitignore  ComfyUI_RiceRound.7z  README.md  __init__.py  auth_unit.py  encrypt_node.py  input_node.py  message_holder.py  output_node.py  publish.py  pyproject.toml  requirements.txt  rice_def.py  rice_install_client.py  rice_prompt_handler.py  rice_prompt_info.py  rice_url_config.py  rice_websocket.py  utils.py  version.json
demo/: original.json  workflow_guest.json  workflow_simple.json
example_workflows/: simple_workflow.json
js/: riceconfig.js  riceround.js
workflow/: publish-node.yml
