[project]
name = "comfyui_riceround"
description = "This is an imaginative project that allows for one-click deployment, providing both an online page and a ComfyUI cloud node."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["aiohttp", "pyzipper", "websockets", "portalocker", "tomlkit"]

[project.urls]
Repository = "https://github.com/RiceRound/ComfyUI_RiceRound"


[tool.comfy]
PublisherId = "riceround"
DisplayName = "ComfyUI_RiceRound"
Icon = "https://www.riceround.online/RiceRound.ico"
